--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -24,7 +24,7 @@ section{
 	margin-top:1em;
 	font-size:120%;
 	padding: 20px;
-	background#fff;
+	background:#fff;
 }
 
 /*Links */
@@ -92,6 +92,21 @@ a.signup_button {
 	-webkit-border-radius:10px;
 	border-radius:10px;
 }
+
+/*Footer*/
+
+footer{
+	text-align:center;
+	margin-top:10px;
+	width:710px;
+	margin-left:auto;
+	margin-right:auto;
+}
+
+footer nav {
+	float:none;
+}
+
 
 
 
